less airbases in france

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -785,7 +785,7 @@
  GER_flaktower:0 "Flaktowers"
  GER_flaktower_desc:0 "Flaktowers were permanent fortresses constructed in majors cities as an emergency war measure to counter the raids by large strategic bomber formations. They were often constructed on the roofs of large buildings."
  GER_naval_attack_bomber:0 "Naval Patrol"
- GER_naval_attack_bomber_desc:0 "The Luftwaffe initially used aircraft to support the Kriegsmarine, making great loops out across the North Sea and, following the fall of France, the Atlantic Ocean. Aircraft were used for maritime patrols and reconnaissance, searching for Allied convoys and warships that could be reported for targeting by U-boats. Winston Churchill called these patrol aircraft the "Scourge of the Atlantic" during the Battle of the Atlantic due to its contribution to the heavy Allied shipping losses."
+ GER_naval_attack_bomber_desc:0 ""
  GER_tactical_air_effort:0 "Kampgeschwader"
  GER_tactical_air_effort_desc:0 "The era is past when armies could win wars without looking to the skies. We must develop our bombers to provide our soldiers with air support and strike the enemy far beyond the battlefield."
  GER_tactical_air_effort_2:0 "Blitz Bomber"
@@ -1183,12 +1183,14 @@
 
  GER_antitank_aircraft:0 "Henschel"
  GER_antitank_aircraft_desc:0 "After the experience of spain we should consider to give the close air support better armored planes!"
- GER_naval_air_doc:0 "Naval Attack Bomber"
+ GER_naval_air_doc:0 "Träger-Stukagruppe"
  GER_naval_air_doc_desc:0 "The efficacy of air strikes against naval targets was demonstrated by the Americans already back in 1921. We should not neglect this branch of the Air Force if we intend to wage war on a naval power."
- GER_naval_bomber:0 "Naval Attack Bomber"
+ GER_naval_bomber:0 "Küstenflieger-geschwader"
  GER_naval_bomber_desc:0 "The efficacy of air strikes against naval targets was demonstrated by the Americans already back in 1921. We should not neglect this branch of the Air Force if we intend to wage war on a naval power."
- GER_naval_patrol:0 "Naval Patrol Bomber"
- GER_naval_patrol_desc:0 "Unfortunately, navies take an exponentially longer time to build up than armies or air forces, which is why the Kriegsmarine is probably the weakest link in the mighty German military and one that can easily be exploited by our enemies. That is why we shall focus more of our resources on developing and constructing naval bombers. We will remind our enemies that the Luftwaffe rules all the skies, even those atop the sea, and we shall do that by building aircraft specially designed to attack their ships. One of those planes will be the Fw 200 Condor, a highly modern naval bomber that will leave our enemies confused when they ask themselves where all their ships went."
+ GER_naval_patrol:0 "Naval Patrol Bombers"
+ GER_naval_patrol_desc:0 "The Luftwaffe initially used aircraft to support the Kriegsmarine, making great loops out across the North Sea and, following the fall of France, the Atlantic Ocean. Aircraft were used for maritime patrols and reconnaissance, searching for Allied convoys and warships that could be reported for targeting by U-boats. Winston Churchill called these patrol aircraft the "Scourge of the Atlantic" during the Battle of the Atlantic due to its contribution to the heavy Allied shipping losses."
+ GER_naval_bomber_2:0 "Naval Bomber Designs"
+ GER_naval_bomber_2_desc:0 ""
  GER_levelbomber_focus:0 "Level Bombing"
  GER_levelbomber_focus_desc:0 "The era is past when armies could win wars without looking to the skies. We must develop our tactical bombers to provide our soldiers with the air support they need."
  GER_divebomber_focus:0 "Junkers"
@@ -2469,6 +2471,7 @@ USA_pearl_harbor_gambit:0 "Pearl Harbor Gambit"
 USA_pearl_harbor_gambit_desc:0 "The naval base in Pearl Harbor is an easy target for the Japanese. By basing a fleet there, we will demonstrate our power in the Pacific. Will they dare challenge such a bold move?"
 USA_pearl_harbor_gambit_tt:0 "§YWhile the focus is running, Japan will have the opportunity to launch an attack.§! Should they wait, we will have better prepared defenses! We will gain: 4 naval base levels, 2 air base levels, 1 anti-air level, 2 bunkers and 2 coastal forts. After the gambit is complete they will also have §Greduced§! effect of their attack."
 USA_pearl_harbor_gambit_2_tt:0 "§RIf the Japanese manage to attack Pearl Harbor without a US fleet present there the Japanese bombers will have a turkey shoot with our fuel depots on the island!.§!"
+JAP_pearl_harbor_gambit_tt:0 "§YDuring the Americans 50-day buildup phase, we have the opportunity to launch an attack.§! Should we wait, they will have better prepared defenses! After the gambit is complete they will also have §Greduced§! effect of our attack."
 USA_cancel_pearl_harbor_gambit:0 "Cancel Pearl Harbor Gambit"
 USA_cancel_pearl_harbor_gambit_desc:0 "Stationing a fleet in Pearl Harbor endangers the lives of our sailors. We will not risk them to provoke a war with Japan."
 USA_air_war_plans_division:0 "Aeronautical Industry Subsidies"
