--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -871,6 +871,7 @@
  usa.3.t:0 "American Fleet in Pearl Harbor"
  usa.3.d:0 "The diplomatic and economic sanctions we have suffered from the United States appears to have been the beginning of something more threatening. The American Pacific Fleet has been stationed in the naval base in Pearl Harbor, Hawaii, clearly signaling that the Americans will maintain a strong presence in the Pacific and continue supporting our enemies. Striking against the base at this point may give us the element of surprise. Should we wait, they will have better prepared defenses resulting in §Rreduced§! effect of our §RTora Tora Tora§! focus."
  usa.3.a:0 "Who knows how long the opportunity will last?"
+ usa.3.b:0 "Lets not get ahead of ourselves..."
  usa.4.t:0 "Destroyers for Bases Agreement"
  usa.4.d:0 "Having taken a stance against the Germans, the US appear interested in ensuring Britain stands strong against the German threat. They are, however, also concerned with maintaining their own naval presence in the Atlantic. In exchange for several of our naval bases, they will supply our nation with destroyer ships. The ships have been in reserve, but accepting will still strengthen the military bonds between our nations, and may be a wise decision."
  usa.4.a:0 "This is a unique opportunity."
