--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  diff_very_easy_ai:0 "Player Bonuses"
  diff_easy_ai:0 "No Bonuses AI"
  diff_normal_ai:0 "Regular AI Difficulty"
@@ -184,9 +184,10 @@
  betterlategame_idea:0 "Disabled AI Division Training"
  betterlategame_idea_desc:0 "This AI controlled country is disabled from training new units but will keep producing equipment and buy resources from the world market."
  
- SOV_rear_is_safe:0 "Rear is safe"
+ SOV_rear_is_safe:0 "Rear is Safe"
  SOV_rear_is_safe_desc:0 "Our backyard is safe from possible Japanese attacks for now."
  SOV_Tolkach_idea:0 "Tolkach"
+ SOV_Atheism_idea:0 "Atheist State"
  SOV_STAVKA_idea:0 "STAVKA"
  CHI_rapprochement_with_soviet_union:0 "Mission to the Soviets"
  CHI_occupied:0 "§RForeign Occupation§!"
@@ -1449,6 +1450,8 @@
  nkvd_idea_2_desc:0 "§LNKVD, The People's Commissariat for Internal Affairs was a law enforcement agency of the Soviet Union that directly executed the rule of power of the All Union Communist Party. It was also tasked with protection of Soviet borders and espionage, which included political assassinations abroad, influencing foreign governments and enforcing Stalinist policy within communist movements in other countries.§!"
  nkvd_idea_3:0 "NKVD"
  nkvd_idea_3_desc:0 "§LNKVD, The People's Commissariat for Internal Affairs was a law enforcement agency of the Soviet Union that directly executed the rule of power of the All Union Communist Party. It was also tasked with protection of Soviet borders and espionage, which included political assassinations abroad, influencing foreign governments and enforcing Stalinist policy within communist movements in other countries.§!"
+ nkvd_idea_4:0 "Central Headquarters of the Partisan Movement"
+ nkvd_idea_4_desc:0 "The Central Headquarters of the Partisan Movement (TsShPD) served as a central command for Soviet partisans combatting against German occupation, conducting operations ranging anything from reconnaissance to killing German officials  "
  idea_political_correctness:0 "Political Correctness"
  idea_political_correctness_desc:0 "People who think correctly are much harder to influence for foreign powers."
  imperial_glory_idea:0 "Imperial Glory"
@@ -1472,6 +1475,8 @@
  home_of_revolution_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
  home_of_revolution_workers_culture:0 "Home of the Revolution"
  home_of_revolution_workers_culture_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
+ home_of_revolution_breadbasket:0 "Home of the Revolution"
+ home_of_revolution_breadbasket_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
  en_svensk_tiger:0 "En Svensk Tiger"
  en_svensk_tiger_desc:0 "If Sweden is to be like a tiger on the prowl then those who spy on us must not know what we do. In these times of conflict and strife it is the patriotic duty of every Swede to keep silent."
  state_shintoism:0 "State Shintoism"
