--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  diff_very_easy_ai:0 "Player Bonuses"
  diff_easy_ai:0 "No Bonuses AI"
  diff_normal_ai:0 "Regular AI Difficulty"
