--- a/bicemodded/localisation/english/goals_l_english.yml
+++ b/bicemodded/localisation/english/goals_l_english.yml
@@ -175,8 +175,8 @@
  SOV_vasily_chuikov_desc:0 "STAVKA has demanded that Chuikov must abandon his duties in the PRC and return to defend the Union from the fascist invaders."
  sov_don_river_system:0 "Don River System"
  sov_don_river_system_desc:0 "The Don River system is vital for transporting goods and supply across the western parts of Russia."
- sov_stalingrad_area_development:0 "Stalingrad Area Development"
- sov_stalingrad_area_development_desc:0 "Further development of the infrastructure around Stalingrad"
+ industrialize_stalingrad_area:0 "Stalingrad Area Development"
+ industrialize_stalingrad_area_desc:0 "Further development of the infrastructure around Stalingrad"
  sov_retool_tractor_factories:0 "Retool Tractor Factories"
  sov_retool_tractor_factories_desc:0 "We have started the project of converting some of our tractor factories to arms complexes that will produce various heavy military equipment such as tanks."
  sov_develop_urals:0 "Development of the Urals"
@@ -690,8 +690,8 @@
  IRQ_armor_desc:0 "Armor is the new era of warfare, we must see how to use it properly."
  
  
- SOV_saturnprep:0 "Operation Saturn Preparations"
- SOV_saturnprep_desc:0 "For all operations to be successful, we must prepare and find a good strategy. Perhaps we could exploit the overextended front of the Germans as a weakness."
+ SOV_uranusprep:0 "Operation Uranus Preparations"
+ SOV_uranusprep_desc:0 "For all operations to be successful, we must prepare and find a good strategy. Perhaps we could exploit the overextended front of the Germans as a weakness."
  SOV_saviourofeast:0 "Saviour of Eastern Europe"
  SOV_saviourofeast_desc:0 "We have saved Eastern Europe from Fascist oppression, in return they will submit to the Soviet Union and work for our great nation as a way of repaying us for our struggle."
  SOV_t34_new:0 "Ramp up T-34/85 Development"
