war on poland news text

--- a/bicemodded/localisation/english/news_events_mod_l_english.yml
+++ b/bicemodded/localisation/english/news_events_mod_l_english.yml
@@ -69,8 +69,8 @@
  newsmod.10.d:0 "With Mussolini dead and the fascists waning power, the leaders of [ITA.GetName] have decided the time has come to depose King Emmanuel III. Hundreds of thousands of Italians take to the streets across the country, chanting for the monarch's expulsion from government and the abolotion of the monarchy."
  newsmod.10.a:0 "The era of royalty is over!"
  newsmod.10.b:0 "We will send a letter wishing the former king well."
- newsmod.11.t:0 "September Campaign Begins"
- newsmod.11.d:0 "On 31 August 1939, Hitler ordered hostilities against Poland to start at 4:45 the next morning. Because of the earlier stoppage, Poland managed to mobilize only 70% of its planned forces, and many units were still forming or moving to their designated frontline positions.At 04:45, the old German pre-dreadnought battleship Schleswig-Holstein opened fire on the Polish military transit depot at Westerplatte in the Free City of Danzig on the Baltic Sea. However, in many places German units crossed the Polish border even before 04.45 and the Luftwaffe attack on Wieluń started around 04.40.At 08:00, German troops—still without a formal declaration of war issued—attacked near the Polish village of Mokra. The Battle of the Border had begun. Later that day, the Germans attacked on Poland's western, southern and northern borders, while German aircraft began raids on Polish cities."
+ newsmod.11.t:0 "Germany Invades Poland"
+ newsmod.11.d:0 "In a large-scale military operation, which, there is no longer any doubt, had been planned for a time Germany launched an invasion of Poland this morning without an official declaration of war. At 04:45, the old German pre-dreadnought battleship Schleswig-Holstein opened fire on the Polish military transit depot at Westerplatte in the Free City of Danzig on the Baltic Sea. However, in many places German units crossed the Polish border even before 04.45 and German aircraft have begun raids on Polish cities."
  newsmod.11.a:0 "They should've seen this coming."
  newsmod.11.b:0 "Poland has signed its death sentence."
  newsmod.11.c:0 "It's time to show the Germans how hard we can be to beat!"
