ai changes mostly and american focus tree - crashes

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -4031,6 +4031,10 @@
  worldnews.32.d:0 "Today, Allied forces land in Morocco!  In a combined operation by American, British, and Commonwealth forces over 100,000 troops have hit the sandy beaches of North Africa in a surprise move against French Axis-Collaborators being commanded from Vichy.  Many of the former collaborators have already defected to join the forces of Free France, seeing a turn of the tide as the troop transports wash ashore.  With this move, the world watches to see if the tide is turning against the German Reich and its allies, and wonders what surprising moves might be next by Joint Allied Command."
  worldnews.32.a:0 "A new front has opened!"
  
+ worldnews.33.t:0 "American Airmen in RAF"
+ worldnews.33.d:0 "Many experienced American fighter pilots have volunteered to join the RAF, simply by crossing the border to Canada and signing up. The British Government has now formed an RAF squadron composed of Americans, called the 'Eagle Squadron'."
+ worldnews.33.a:0 "So much for neutrality!"
+ 
  news.3144.t:0 "Germany declares war on the Soviet Union!"
  news.3144.d:0 "Germany has launched a surprise offensive into the USSR. Operation Barbarossa (German: Unternehmen Barbarossa) was the code name for Germany's invasion of the Soviet Union during World War II, which was launched on Sunday 22 June 1941. In the two years leading up to the invasion, the two countries signed political and economic pacts for strategic purposes. Nevertheless, the German High Command began planning an invasion of the Soviet Union in July 1940 (under the codename Operation Otto), which Adolf Hitler authorized on 18 December 1940."
  news.3144.a:0 "Ok"
