--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -7090,9 +7090,9 @@
  i_z_equipment_1:0 "Grigorovich IP-1"
  i_z_equipment_1_short:0 "IP-1 Heavy Fighter"
  i_z_equipment_1_desc:0 "The Grigorovich IP-1 ("Cannon fighter") was a heavy fighter aircraft produced in the 1930s. When the performance of the I-Z and its single-shot DRP cannon proved disappointing, L. Kurchevsky developed a new recoilless 75mm APK-4 which could fire five shots instead of just one. The IP-1 was a conventional, low-wing cantilever monoplane with retractable tailskid undercarriage and an open cockpit. Construction throughout was all-metal, and like its predecessor, its horizontal stabiliser was mounted high to avoid gasses from the underwing cannons. Once again, however, trials proved the concept a failure. Nevertheless, the IP-1 was ordered into production, with a modified version that dispensed with the cannon and instead carried two 20 mm autocannon and up to eight 7,62mm ShKAS machine guns in total inside the wings and in pods under each wing."
- tech_early_1:0 "Interwar Fighters"
- tech_early_1_short:0 "I-15/I-16 Fighter"
- tech_early_1_desc:0 "The Polikarpov I-15 was a Soviet biplane fighter aircraft of the 1930s. Nicknamed Chaika ( "Seagull"). Production started in 1934. The I-15 was a small biplane fighter with a gulled upper wing. The Armament was four 7.62mm PV-1 machine guns. It was using a M-22 engine with 473 HP providing a maximum speed of 350 km/h.\n\nWhile working on the I-15 biplane, N.Polikarpov began designing an advanced monoplane fighter, the I-16. It featured cutting-edge innovations such as retractable landing gear and a fully enclosed cockpit, and was optimized for speed with a short stubby fuselage and a radial engine in a NACA cowling. The aircraft was small, light and simple to build. The first production model type 4 of the I-16 used the M-22 engine and carries 2 ShVAK 7.62 mm machineguns."
+ tech_early_1:0 "Polikarpov I-15"
+ tech_early_1_short:0 "I-15 Fighter"
+ tech_early_1_desc:0 "The Polikarpov I-15 was a Soviet biplane fighter aircraft of the 1930s. Nicknamed Chaika ( "Seagull"). Production started in 1934. The I-15 was a small biplane fighter with a gulled upper wing. The Armament was four 7.62mm PV-1 machine guns. It was using a M-22 engine with 473 HP providing a maximum speed of 350 km/h."
  di_6_equipment_1:0 "Kochyerigin DI-6"
  di_6_equipment_1_short:0 "DI-6 Heavy Fighter"
  di_6_equipment_1_desc:0 "The DI-6 was a two seat fighter biplane aircraft."
@@ -7271,7 +7271,7 @@
  mig_1:0 "MiG Fighter"
  mig_1_equipment:0 "MiG-1"
  mig_1_equipment_desc:0 "The MiG-1 was developed to be a high-altitude interceptor. It is a light fighter aircraft."
- mig_1_equipment_1:0 "Mikoyan-Gurevich 1"
+ mig_1_equipment_1:0 "Mikoyan-Gurevich MiG-1"
  mig_1_equipment_1_short:0 "MiG-1 Interceptor"
  mig_1_equipment_1_desc:0 "The Mikoyan-Gurevich MiG-1 was a light fighter aircraft that was designed to meet a requirement for a high-altitude fighter with an inline engine issued in 1939. The approach that the team selected was to build the smallest possible aircraft around the supercharged Mikulin AM-37 powerplant with 1500 HP, thereby minimizing weight and drag  To minimize demand on strategic materials such as aluminum, the aircraft was mostly constructed from steel tubing and wood. Flight testing revealed a number of deficiencies, but it was ordered into production before they could be fixed. Its maximum speed was 657 km/h and its armament was one 12,7mm Berezin UB machine gun and two 7.62 mm ShKAS machine guns."
  tech_mig_1_equipment_1:0 "I-200"
