--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -272,7 +272,7 @@
  peoples_army_desc:0 "The People's Army believes in the primacy of men over weapons, with superior motivation compensating for inferior technology, and enjoys widespread support from the civilian population.\n\n"
  guerilla_warfare:0 "Guerrilla Warfare"
  guerilla_warfare_desc:0 "The enemy advances, we retreat; the enemy camps, we harass; the enemy tires, we attack; the enemy retreats, we pursue."
- ma_barrage:0 "Mass barrage"
+ ma_barrage:0 "Mass Barrage"
  ma_barrage_desc:0 "Supporting artillery can fire indiscriminately at the enemy positions while our men charge forward, not one step backwards!"
  molotov_swarming:0 "Molotov Cocktail Swarming"
  molotov_swarming_desc:0 "Every tank has its limit, at least the crew will boil up at a certain point!"
