--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1979,7 +1979,6 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_defense_of_moscow:0 "Defense of Moscow"
  SOV_defense_of_moscow_desc:0 "The Fascists are knocking at the gates of the capital! Moscow must not be allowed to fall at any cost. Mobilize everyone, from children to old people to hastily erect what defenses we can!"
  SOV_defense_of_moscow_forts:0 "Add §Y28 Land Forts§! in and around Moscow.\n"
-
  delfim_tt:0 "Creates a Submarine III design 'Delfim 37'"
  level_up_heavy_aicraft_factory_tt:0 "§GIncrease§! §YHeavy Aircraft Factory§! technology level:"
  level_up_tank_factory_tt:0 "§GIncrease§! §YTank Factory§! technology level:"
@@ -1995,6 +1994,10 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_defense_of_stalingrad_forts:0 "Set every province in Stalingrad state to at least §Ylevel 3 Land Fort§! and add §Y4 additional Land Forts§! in the city.\n"
  SOV_weapons_prod:0 "A Rifle for Every Man"
  SOV_weapons_prod_desc:0 "We need to produce large amounts of equipment so we can fight the German onslaught."
+ SOV_uranusprep:0 "Operation Uranus Preparations"
+ SOV_uranusprep_desc:0 "For all operations to be successful, we must prepare and find a good strategy. Perhaps we could exploit the overextended front of the Germans as a weakness"
+ SOV_saviourofeast:0 "Saviour of Eastern Europe"
+ SOV_saviourofeast_desc:0 "Gruesome years of fascist oppression has taken its toll upon the peoples of Eastern Europe. It's possible use this to our advantage; promoting ourselves as liberators to the local population would make them more likely to support our cause. We'll be sure to grant them their freedom back after the war..."
  SOV_murmansk_rail:0 "Murman Railway"
  SOV_murmansk_rail_desc:0 "Kirov Railway (Russian: Кировская железная дорога, Kirovskaya zheleznaya doroga, to 1935 Murman Railway) is a 1,520 mm broad gauge Russian railway network that links the Murman Coast and Murmansk city (in the north) and Saint Petersburg (in the south). The railway is operated by the Arktika passenger train, see List of named passenger trains of Russia."
  SOV_infrastructure_effort:0 "Infrastructure Effort"
@@ -2232,6 +2235,8 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_persia_lend_lease_desc:0 "The Persian Gulf and access through Persia means that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
  SOV_Beria_Partisans:0 "Beria's Partisans"
  SOV_Beria_Partisans_desc:0 "Beria has organized the resistance behind the lines, he is instilling the occupied Soviet citizens with a hatred for the fascist invaders. They will work behind the lines to disrupt the invaders by destroying supply lines, raiding bases and destroying infrastructure."
+ SOV_Expanded_Partisans:0 "Establish the TsShPD"
+ SOV_Expanded_Partisans_desc:0 "During this crucial moment, we have no patience for the incompentent bureaucrats in the NKVD. For better or for worse, we shall officially transfer responsibility of partisan operations to the military, integrating them into our armed forces. The Central Headquarters of the Partisan Movement (TsShPD) will task our comrades behind enemy lines, with destroying enemy communications, sabatoging supplies, and mercilessly cleansing our Motherland of the fascist invaders."
  SOV_STAVKA:0 "Stavka"
  SOV_STAVKA_desc:0 "The Soviet High Command, responsible for all offensive and defensive plans taken during the War."
  SOV_order_no_277:0 "Issue order No.277"
