--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2277,12 +2277,12 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_Naval_Bombers_desc:0 "We are surrounded by water, so we should look into planes and training that will allow us to intercept and attack enemy fleets. Naval bombing is a specialized skill and should be a focus."
  SOV_Frontal_Aviation:0 "MiG"
  SOV_Frontal_Aviation_desc:0 "MiG, a family of Soviet military fighter aircraft produced by a design bureau founded in 1939 by Artem Mikoyan (M) and Mikhail Gurevich (G)."
- SOV_remove_air_purge:0 "Remove Air Purge"
- SOV_remove_air_purge_desc:0 "Our airforce is currently in limbo from lack of leadership, we need to establish new high ranking officials."
+ SOV_remove_air_purge:0 "Chief Marshal of Aviation"
+ SOV_remove_air_purge_desc:0 "The recovery of our airforce from the recent purges will require the creation of a new rank, that of Chief Marshal of Aviation. A role responsible for reorganizing our airforce to an effective fight force capable of competing with the Luftwaffe."
  SOV_Red_Army_Airforce:0 "Red Army Airforce"
  SOV_Red_Army_Airforce_desc:0 "Our airforce must be fully coordinated with the army to intercept enemy ground attacks and support the vast offensives, this will require a large amount of new airplanes and pilots."
- SOV_great_navy_purge:0 "Remove Navy Purge"
- SOV_great_navy_purge_desc:0 "Our navy is currently in limbo from lack of leadership, we need to establish new high ranking officials."
+ SOV_great_navy_purge:0 "Train New Admirals"
+ SOV_great_navy_purge_desc:0 "The Great Purge, despite cleansing our state of any possible backstabbing counter-revoulutionaries, has ravaged our high command. Nearly all of our senior admirals are dead, a glaring weakness that we must resolve."
  SOV_carriers:0 "Carrier Focus"
  SOV_carriers_desc:0 "There is an intense argument among naval theorists about the continued viability of the battleship. There are those who argue that modern air power will come to dominate naval power, and that the aircraft carrier will replace the battleship as the king of the oceans."
  SOV_modern_navy:0 "Modernized Navy"
