--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2484,6 +2484,10 @@ USA_TAC:0 "Tactical Bomber Effort"
 USA_TAC_desc:0 "The era has passed when armies could win wars without looking to the skies. We must develop our tactical bombers to provide our soldiers with the air support they need."
 USAF:0 "USAAF"
 USAF_desc:0 "The United States Army Air Force was formed in 1941 as a successor to the previous United States Army Air Corps. While formally subordinate to the Army and the US Department of War, it was de facto a highly independent organisation that controlled the conduct of the air war across multiple theatres without requiring confirmation from the Army Chief of Staff."
+USA_flying_fortress:0 "Flying Fortresses"
+USA_flying_fortress_desc:0 "Some are convinced that strategic destruction of enemy factories will eventually cause the enemy to wear down, allowing us to win. We could develop aircraft capable of this, although some officials doubt our capacity to produce them in great enough numbers."
+USA_NACA:0 "Advisory Committee"
+USA_NACA_desc:0 "The National Advisory Committee for Aeronautics (NACA) was established in 1915 "to supervise and direct the scientific study of the problems of flight with a view to their practical solution." Since then, the NACA became the world's premier aeronautical research organizations."
 USA_selective_training_act:1 "Selective Training Act"
 USA_selective_training_act_desc:1 "The United States has historically been slow to adopt a draft, even in times of war. We are no longer able to afford this luxury."
 USA_louisiana_maneuvers:1 "Louisiana Maneuvers"
