--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -299,7 +299,7 @@
  SOV_molotov_pact_extension:0 "Demand Moldova"
  SOV_molotov_pact_extension_desc:0 "Despite the Romanian attempts to get international support from other major countries like Germany and Italy we can expect enough leverage with the Molotov Pact in place."
  SOV_amph2:0 "Morskaya Pekhota"
- SOV_amph2_desc:0 "Our brave Marines have defended our homeland for centuries. During the Napoleonic Wars, our naval infantry defended our West. During the Russo-Japanese War, they defended our East. During the Crimean War, they defended the South. More resources should be spent for these brave men. New tactics should be developed so they can fight better. New equipment should be research so they can fight harder. Our budget more than compensates for this project, so let's use it to make sure our Morskaya Pekhota get what they need."
+ SOV_amph2_desc:0 "Our brave Naval Infantry have defended our homeland for centuries. During the Napoleonic Wars, our naval infantry defended our West. During the Russo-Japanese War, they defended our East. During the Crimean War, they defended the South. More resources should be spent for these brave men. New tactics should be developed so they can fight better. New equipment should be research so they can fight harder. Our budget more than compensates for this project, so let's use it to make sure our Morskaya Pekhota get what they need."
 
  SOV_armored_car:0 "Armored Car Designs"
  SOV_armored_car_desc:0 "With the gradual decline of mounted cavalry, armored cars were developed for carrying out duties formerly assigned to light cavalry."
@@ -340,7 +340,7 @@
  SOV_develope_belarus_desc:0 "Our economic and social policies over past two decades in the Byelorusian Soviet Socialist Republic (BSSR) have had... mixed results.\n However the last Five-Year Plan has had success, so we should continue our policy of 'Socialist Industrialisation' in the BSSR and further increase industrial output, building on the strength of the local fuel, wood, paper, textile, shoe and food industries."
  
  SOV_develope_baltics:0 "The 5-Year Plan in the Balticum"
- SOV_develope_baltics_desc:0 "The Baltics are in a poor state after centuries of reacionary mismanagement, we should recreate the successes of the Five-Year Plans here to kickstart their economical recovery."
+ SOV_develope_baltics_desc:0 "The Baltics are in a poor state after centuries of reactionary mismanagement, we should recreate the successes of the Five-Year Plans here to kickstart their economical recovery."
  
  SOV_t28_dev:0 "Tank Development"
  SOV_t28_dev_desc:0 "We have to pursue our military conquests and go forward, let us focus on our tank industry and compete with other major powers!"
@@ -1973,9 +1973,9 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_begin_the_third_five_year_plan_focus:0 "Begin Work on the Third Five-Year Plan"
  SOV_begin_the_third_five_year_plan_focus_desc:0 "The third Five-Year Plan, was Stalin's vision to make up for production increase loss in the 1930's, claiming to be more vigorous than ever. This however was cut short by the German invasion in 41', two years before the proposed end."
  SOV_move_industry_to_urals:0 "Move Industry To the Urals"
- SOV_move_industry_to_urals_desc:0 "The backstabbing Hitlerists must not be allowed to seize our precious factories in the western part of the USSR. With supreme effort and sacrifice, we should be able to quickly move the most valuable heavy equipment and facilities to Chelyabinsk and other locations in the Urals."
+ SOV_move_industry_to_urals_desc:0 "The backstabbing Hitlerites must not be allowed to seize our precious factories in the western part of the USSR. With supreme effort and sacrifice, we should be able to quickly move the most valuable heavy equipment and facilities to Chelyabinsk and other locations in the Urals."
  SOV_industrial_war_mobilisation:0 "Great Patriotic War Mobilization"
- SOV_industrial_war_mobilisation_desc:0 "Brothers, sisters, comrades of the Soviet Union! This is our Darkest Hour, we need to do everything in our power to beat back the foreign Invaders and save the working class from it's impending doom! In one of the greatest feats of war logistics, Soviet factories were evacuated on an enormous scale, they were dismantled and shipped eastwards along four principal routes to the Caucasus, Central Asian, Ural, and Siberian regions where they were quickly set up with the help of western expertise and materiel."
+ SOV_industrial_war_mobilisation_desc:0 "Brothers, sisters, comrades of the Soviet Union! This is our Darkest Hour, we need to do everything in our power to beat back the foreign invaders and save the working class from it's impending doom!"
  SOV_defense_of_moscow:0 "Defense of Moscow"
  SOV_defense_of_moscow_desc:0 "The Fascists are knocking at the gates of the capital! Moscow must not be allowed to fall at any cost. Mobilize everyone, from children to old people to hastily erect what defenses we can!"
  SOV_defense_of_moscow_forts:0 "Add §Y28 Land Forts§! in and around Moscow.\n"
@@ -2108,7 +2108,7 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_claims_on_baltic_desc:0 "Peter the Great was right in seeking access to ports in the west. The Baltic States, which were lost after the revolution, should be reintegrated into the Soviet Union."
  SOV_claims_on_baltic_tt:0 "We rejected the §HMolotov-Ribbentrop Pact§!"
  SOV_war_with_Finland:0 "Winter War"
- SOV_war_with_Finland_desc:0 "Invade Finland to secure our northern borders"
+ SOV_war_with_Finland_desc:0 "Back during the days before the revolution, Finland was a part of the putrid Russian Empire. Now it shall be a part of the glorious Soviet Union, whether they want to or not."
  SOV_claim_bessarabia:0 "Claim on Bessarabia"
  SOV_claim_bessarabia_desc:0 "The Black Sea is even more important to our economy than the Baltic. We must do everything we can to secure control of the Bosphorus and the Dardanelles."
  SOV_claims_on_turkey:0 "Claims on Turkey"
@@ -2278,7 +2278,7 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_Frontal_Aviation:0 "MiG"
  SOV_Frontal_Aviation_desc:0 "MiG, a family of Soviet military fighter aircraft produced by a design bureau founded in 1939 by Artem Mikoyan (M) and Mikhail Gurevich (G)."
  SOV_remove_air_purge:0 "Chief Marshal of Aviation"
- SOV_remove_air_purge_desc:0 "The recovery of our airforce from the recent purges will require the creation of a new rank, that of Chief Marshal of Aviation. A role responsible for reorganizing our airforce to an effective fight force capable of competing with the Luftwaffe."
+ SOV_remove_air_purge_desc:0 "The recovery of our airforce from the recent purges will require the creation of a new rank, that of Chief Marshal of Aviation. A role responsible for reorganizing our airforce to an effective fighting force capable of competing with the Luftwaffe."
  SOV_Red_Army_Airforce:0 "Red Army Airforce"
  SOV_Red_Army_Airforce_desc:0 "Our airforce must be fully coordinated with the army to intercept enemy ground attacks and support the vast offensives, this will require a large amount of new airplanes and pilots."
  SOV_great_navy_purge:0 "Train New Admirals"
