Port in more 1.12.5 stuff AI improvements

--- a/bicemodded/localisation/english/countries_l_english.yml
+++ b/bicemodded/localisation/english/countries_l_english.yml
@@ -1348,12 +1348,12 @@
  LBA_ADJ:0 "Libyan"
  WGR_fascism:0 "Fourth Reich"
  WGR_fascism_DEF:0 "The Fourth Reich"
- WGR_democratic:0 "West Germany"
- WGR_democratic_DEF:0 "West Germany"
+ WGR_democratic:1 "Federal Republic of Germany"
+ WGR_democratic_DEF:1 "the Federal Republic of Germany"
  WGR_neutrality:0 "Bayern-Hannover"
  WGR_neutrality_DEF:0 "Bayern-Hannover"
  WGR_communism:0 "Socialist Republic of Germany"
- WGR_communism_DEF:0 "The Socialist Republic of Germany"
+ WGR_communism_DEF:0 "the Socialist Republic of Germany"
  WGR_fascism_ADJ:0 "West German"
  WGR_democratic_ADJ:0 "West German"
  WGR_neutrality_ADJ:0 "West German"
@@ -1366,9 +1366,9 @@
  DDR_democratic:0 "Constitutional Germany"
  DDR_democratic_DEF:0 "Constitutional Germany"
  DDR_neutrality:0 "Kingdom of Prussia"
- DDR_neutrality_DEF:0 "The Kingdom of Prussia"
- DDR_communism:0 "East Germany"
- DDR_communism_DEF:0 "East Germany"
+ DDR_neutrality_DEF:0 "the Kingdom of Prussia"
+ DDR_communism:2 "German Democratic Republic"
+ DDR_communism_DEF:2 "the German Democratic Republic"
  DDR_fascism_ADJ:0 "East German"
  DDR_democratic_ADJ:0 "East German"
  DDR_neutrality_ADJ:0 "East German"
