--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -185,7 +185,7 @@
  EFFECT_REMOVE_EXTRA_STATE_SHARED_BUILDING_SLOTS:0 "Remove $COUNT|R$ Building Slots."
  EFFECT_ADD_TO_WAR:0 "Joins $COUNTRY1|Y$ in their war against $COUNTRY2|Y$.\n"
  EFFECT_CREATE_EQUIPMENT_VARIANT:0 "Create a variant of $PARENT|Y$: $NAME|Y$.\n"
- EFFECT_ADD_EQUIPMENT_PRODUCTION:0 "Add a production of $EQUIPMENT|Y$.\n"
+ EFFECT_ADD_EQUIPMENT_PRODUCTION:1 "Add a production line of $EQUIPMENT|Y$.\n"
  EFFECT_ADD_ACE:0 "$NAME|Y$ '$CALLSIGN|Y$' $SURNAME|Y$ becomes a flying Ace.\n"
  NO_EFFECT:0 "Nothing happens"
  EFFECT_ADD_COUNTRY_LEADER_TRAIT:0 "$LEADER|H$ gains: $TRAIT$"
@@ -216,7 +216,7 @@
  EFFECT_ADD_RELATION_MODIFIER:0 "Gains $NAME|H$ when dealing with $TARGET|H$ - ($DESC$)"
  EFFECT_REMOVE_RELATION_MODIFIER:0 "Removes $NAME|H$ when dealing with $TARGET|H$ - $DESC$"
  EFFECT_SET_BUILDING_CONSTRUCTION:0 "Set $BUILDING|Y$ to level $NUMBER|Y$."
- EFFECT_ADD_OFFSITE_BUILDING:0 "Add $NUMBER|Y$ offmap $BUILDING|Y$."
+ EFFECT_ADD_OFFSITE_BUILDING:1 "Add $NUMBER|G$ offmap $BUILDING|Y$."
  EFFECT_ADD_UNIT_LEADER_TRAIT:0 "Gains $TRAITNAME|Y$\n$TRAITMODIFIER$"
  EFFECT_ADD_UNIT_LEADER_TRAIT_WITH_DURATION:0 "Gains $TRAITNAME|H$ for $NUMDAYS|H$ days.\n$TRAITMODIFIER$"
  EFFECT_ADD_TRAIT:0 "$NAME|H$ gains $TRAITNAME|Y$\n$TRAITMODIFIER$"
@@ -369,7 +369,7 @@
  EFFECT_ADD_HISTORY_ENTRY_UNIT_EFFECT:0 "$UNIT$ receives new history entry"
  TEST_HISTORY_ENTRY_KEY:0 "Stole Mussolini's $SUBJECT$ from his cabinet in $PROVINCE$."
  CHANGE_DIV_TEMPLATE_EFFECT:0 "$DIV$ switches template to $TEMPLATE|H$"
- EFFECT_SEND_EMBARGO:0 "Embargos $COUNTRY|H$"
+ EFFECT_SEND_EMBARGO:1 "Embargo $COUNTRY|H$"
  EFFECT_BREAK_EMBARGO:0 "Breaks the embargo with $COUNTRY|H$"
  EFFECT_ADD_RANDOM_UNIT_TRAIT:0 "Adds a random valid unit leader trait to divisional commander"
  
