winterwar and winterwar related decisions

--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -21,6 +21,8 @@
  moscow_metro:0 "Moscow Metro"
  tula_steel:0 "Build the Tula Steel Refinery"
  lipetsk_steel:0 "Build the Lipetsk Steel Refinery"
+ SOV_winterwar_draft:0 "Reevaluate the STAVKA"
+ SOV_winterwar_prolong:0 "Replace the Supreme Commander of the Leningrad District"
  
  ENG_asia_troops2:0 "You will get 4 strong units in §YMalaya§!,§YBurma§! and §YHong Kong§!!"
  demand_taiwan_tt:0 "You must have more than §Y1 Capital Ship§! and more than §Y24 Screens§!"
