--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -5,6 +5,7 @@
  diff_hard_ai:0 "Veteran AI Difficulty"
  diff_very_hard_ai:0 "Elite AI Difficulty"
  supply_focus:0 "AI Puppets Reduction"
+ winterwar_veteran:0 "Winterwar Veteran"
  AST_lawrence_anderson:0 "Lawrence Anderson"
  AST_henry_northcote:0 "Henry Northcote"
  AST_thomas_denman:0 "Thomas Denman"
