--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1984,6 +1984,8 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  level_up_tank_factory_tt:0 "§GIncrease§! §YTank Factory§! technology level:"
  SOV_government_loans:0 "Issue Compulsory Government Loans"
  SOV_government_loans_desc:0 "Borrowing money to our citizens will make us more money in the long term that we can invest into cooperation programs with nations overseas."
+ SOV_lessons_winter:0 "Form Headquarters of Supreme High Command"
+ SOV_lessons_winter_desc:0 "After the bloody war we need to reform our Supreme High Command, this is going to be the first step in reforming our Armed Forces."
  SOV_defense_of_leningrad:0 "Defense of Leningrad"
  SOV_defense_of_leningrad_desc:0 "The Fascists are knocking at the gates! Leningrad must not be allowed to fall at any cost. Mobilize everyone, from children to old people to hastily erect what defenses we can muster!"
  SOV_defense_of_liningrad_forts:0 "Add §Y9 Land Forts§! in and around Leningrad and §Y6 Land Forts§! in Volkhov.\n"
