Skimmed through the last set of changes in NF file and made some notes with #STJERN Also tweaked the government loans focus text

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1983,7 +1983,7 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  level_up_heavy_aicraft_factory_tt:0 "§GIncrease§! §YHeavy Aircraft Factory§! technology level:"
  level_up_tank_factory_tt:0 "§GIncrease§! §YTank Factory§! technology level:"
  SOV_government_loans:0 "Issue Compulsory Government Loans"
- SOV_government_loans_desc:0 "Borrowing money to our citizens will make us more money in the long term that we can invest into cooperation programs with nations overseas."
+ SOV_government_loans_desc:0 "Borrowing money from our citizens will provide direly needed cash reserves to invest in foreign business ventures."
  SOV_lessons_winter:0 "Form Headquarters of Supreme High Command"
  SOV_lessons_winter_desc:0 "After the bloody war we need to reform our Supreme High Command, this is going to be the first step in reforming our Armed Forces."
  SOV_defense_of_leningrad:0 "Defense of Leningrad"
