I am a real coder lmao

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -148,7 +148,7 @@
  mass_motorization_desc:0 "An even greater focus on Motorized troops. This doctrine will shift some need for horses to trucks and cars in infantry-type front line formations."
  amphibious_equipment:0 "Amphibious Support Company"
  amphibious_equipment_desc:0 "Amphibious support company to aid us in swamps and in naval invasions."
- mountain_equipment:0 "Improved Mountain equipment"
+ mountain_equipment:0 "Improved Mountain Equipment"
  mountain_equipment_desc:0 "Improved Mountain equipment."
  amphibious_equipment2:0 "Advanced Amphibious equipment"
  amphibious_equipment2_desc:0 "Advanced Amphibious equipment."
