--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -22,6 +22,7 @@
  tula_steel:0 "Build the Tula Steel Refinery"
  lipetsk_steel:0 "Build the Lipetsk Steel Refinery"
  SOV_winterwar_draft:0 "Reevaluate the STAVKA"
+ SOV_tolkachupgrade:0 "§YTolkach Focus§! Will §GUpgrade§! This Focus"
  SOV_winterwar_prolong:0 "Replace the Supreme Commander of the Leningrad District"
  
  ENG_asia_troops2:0 "You will get 4 strong units in §YMalaya§!,§YBurma§! and §YHong Kong§!!"
