--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2842,8 +2842,10 @@
  
  
  britain.24.t:0 "Failed Foreign Policy"
+ britain.244.t:0 "Failed British Foreign Policy"
  britain.24.d:0 "The people feel betrayed by the failed foreign policy of appeasement by Neville Chamberlain's administration, have British lives been lost due to the sheer incompetence of this man? Neville Chamberlain. Attlee, the leader of the Labour party confirmed that Labour can no longer stand behind Neville Chamberlain's coalition."
  britain.24.a:0 "Who will lead us?"
+ britain.24.a:0 "Who will lead Britain?"
  britain.25.t:0 "Major Invasion Preparations"
  britain.25.d:0 "[From.GetNameDef] is letting us know they are preparing mass amphibious landings on the shores of europe, they request our aid in this vast expeditions of which the future of the war may depend upon!"
  britain.25.a:0 "God save the queen!"
