--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1998,6 +1998,8 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_defense_of_stalingrad_forts:0 "Set every province in Stalingrad state to at least §Ylevel 3 Land Fort§! and add §Y4 additional Land Forts§! in the city.\n"
  SOV_weapons_prod:0 "A Rifle for Every Man"
  SOV_weapons_prod_desc:0 "We need to produce large amounts of equipment so we can fight the German onslaught."
+ SOV_fighter_new:0 "Low-Altitude Fighters"
+ SOV_fighter_new_desc:0 "The nature of our war requires our fighters, and airforce in general, to be in a supportive role to assist our army in any major operation. By specializing more towards low-altitude fighters, we hope to escort our ground attack aircraft to aid our comrades on the ground."
  SOV_uranusprep:0 "Operation Uranus Preparations"
  SOV_uranusprep_desc:0 "For all operations to be successful, we must prepare and find a good strategy. Perhaps we could exploit the overextended front of the Germans as a weakness"
  SOV_saviourofeast:0 "Saviour of Eastern Europe"
@@ -2293,6 +2295,7 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_modern_navy_desc:0 "Having modern and powerful ships is all well and good, but wars aren't won solely from equipment. We have to train our military to use them effectively and to think outside the box when it comes to strategy."
  SOV_bcs:0 "New Battleships"
  SOV_bcs_desc:0 "We need to improve our Battleships, they need to have the newest equipment we can provide!"
+ 
  ##### USA #####
  USA_artillery_effort:0 "Artillery Effort"
  USA_artillery_effort_desc:0 "Artillery played a key role in the Great War, and it seems clear enough that we need to improve the one that our troops are using at the moment, for it may be a decisive element in future battles."
